# com.oraclinical.img_qual

./: LICENSE  README.md  pyproject.toml
src/example_package/: __init__.py  example.py  example_image_processing.py  example_text_processing.py  quality_detector.py
src/ora_img_qual/: __main__.py
tests/: test_example.py  test_example_image_processing.py  test_example_text_processing.py
